# voice-agent-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.agent  README.md  docker-compose.yml  instructions.md  pyproject.toml  railway-agent.toml  railway.toml
agent/: .gitignore  Dockerfile  README.md  __init__.py  livekit.toml  livekit.toml.builder.bak  requirements.txt  sip_config.yaml  voice_agent.py
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_create_tenant_settings_table.py  003_create_call_logs_table.py  004_add_language_columns.py  005_add_recording_columns.py  006_add_min_silence_duration.py  007_create_global_settings_table.py  008_create_tenants_table.py  009_create_user_tenants_table.py  010_create_invitations_table.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  calls.py  checkout.py  customers.py  documents.py  esim.py  health.py  invitations.py  orders.py  phone_numbers.py  plans.py  settings.py  support.py  voice.py  webhooks.py
app/core/: config.py  database.py  logging.py  security.py
app/db/: __init__.py  base.py
app/models/: __init__.py  call_log.py  customer.py  destination.py  device.py  document.py  global_settings.py  invitation.py  order.py  phone_number.py  plan.py  rag_document.py  settings.py  tenant.py  user.py  user_tenant.py  voice_call.py
app/schemas/: __init__.py  checkout.py  customer.py  order.py  plan.py  support.py  webhook.py
app/services/: __init__.py  background_tasks.py  delivery_service.py  esim_service.py  livekit_service.py  models_service.py  notification_service.py  order_service.py  rag_service.py  redis_service.py  stripe_service.py  support_service.py  voice_pipeline.py
app/utils/: helpers.py
resources/: dont-build-voice-ai-agents-claude-builds-them-for-.md  i-found-the-fastest-rag-solution-for-voice-ai-agen.md
scripts/: setup_railway.ps1  setup_railway.sh  test_api.ps1
